--- a/src/styles/ProductCard.scss
+++ b/src/styles/ProductCard.scss
@@ -1,14 +1,14 @@
 @use "../utils/constants" as * ;
 
 .Card {
-    border: 1px solid black;
     height: 300px;
     width: 220px;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: space-between;
-    background-color: rgb(225, 225, 225);
+    background-color: rgb(255, 255, 255);
+    box-shadow: 1px 1px 2px;
 
 
     &_img {
@@ -36,11 +36,13 @@
 
     &_button {
         display: flex;
-        border: 1px solid black;
+        border: 2px solid black;
         width: 80%;
-        height: 30px;
+        height: 40px;
         justify-content: space-around;
+        align-items: center;
         margin-bottom: 10px;
+
 
         &:hover {
             cursor: pointer;
